manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wooz-backend-svc
  labels:
    app: wooz-backend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: wooz-backend
