manifest/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wooz-backend-ingressroute
  labels:
    app: wooz-backend
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`api.wooz.rpratama.web.id`)
      kind: Rule
      services:
        - name: wooz-backend-svc
          port: 3000
  tls:
    secretName: {}
